Portfolio UI changes

--- a/branches/portfolio/clientv2/alerts.html
+++ b/branches/portfolio/clientv2/alerts.html
@@ -39,7 +39,7 @@
 		</div>
 		<!-- ko {if: finalWL().length} -->
 		<div class="search" data-bind="if: displayList">
-			<h5>Search for companies to add to your Watch List</h5>
+			<h5>Search for companies to add to your StockList</h5>
 			<div>
 				<span class="searchbar">
 					<input type="text" placeholder="Company name or stock code" data-bind="enable:searchReady, value:searchInput, valueUpdate:'keyup'" />
