Portfolio UI Tooltip changes

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -104,9 +104,9 @@
 			<div class="portfolioMenu">
 				<h3>Portfolio Value</h3>
 				<ul class="portfolioMenu">
-					<li><div class="floatLeft w80P blackCl">TOTAL INVESTED&nbsp;<img src="img/ico-info_blue.png" alt="" data-bind="tooltip: ''"  /></div><div id="totalInvested" style="font-weight:bold;clear: both;"></div></li>
-					<li><div class="floatLeft w80P blackCl">CURRENT VALUE&nbsp;<img src="img/ico-info_blue.png" alt="" data-bind="tooltip: ''"  /></div><div id="totalCurrentValue" style="font-weight:bold;clear: both;"></div></li>
-					<li><div class="floatLeft w80P blackCl">PERCENT CHANGE&nbsp;<img src="img/ico-info_blue.png" alt="" data-bind="tooltip: ''"  /></div><div id="percentageChange" style="font-weight:bold;clear: both;"></div></li>
+					<li><div class="floatLeft w80P blackCl">TOTAL INVESTED&nbsp;<img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'portfolioTotalInvested'"  /></div><div id="totalInvested" style="font-weight:bold;clear: both;"></div></li>
+					<li><div class="floatLeft w80P blackCl">CURRENT VALUE&nbsp;<img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'currentPortfolioValue'"  /></div><div id="totalCurrentValue" style="font-weight:bold;clear: both;"></div></li>
+					<li><div class="floatLeft w80P blackCl">PERCENT CHANGE&nbsp;<img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'portfolioPercentChange'"  /></div><div id="percentageChange" style="font-weight:bold;clear: both;"></div></li>
 					<li>&nbsp;</li>
 				</ul>
 			</div>
