--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -30,7 +30,10 @@
 		
 		<!-- div content for performance functionality -->
 		<div class="grid valuation-results performance" data-bind="css:{'show-hidden': activeTab() == 'performance'}">
-		
+			<div style="margin-left: 15px;margin-bottom: 15px;">
+				<b>Select a timeframe to see how your StockList changed during that time.</b>
+			</div>
+			
 			<div id="performance-chart-content" align="center"></div>
 			
 			<div>
@@ -74,7 +77,7 @@
 								<!-- ko ifnot: id -->
     								<td>&nbsp;
 										<div data-bind="foreach: multiCompData, attr: { id:'multiCompData'+$index()}" style="display: none;">
-											<div class="imgCenterAllign"><img src="img/x-button.png" alt="" data-bind="click: $root.removeIntPerItem.bind($root)" /></div>
+											<div class="imgIntCenterAllign"><img src="img/x-button.png" alt="" data-bind="click: $root.removeIntPerItem.bind($root)" /></div>
 										</div>    								
     								</td>
 								<!-- /ko -->
