Fix for ticket #986

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -69,7 +69,7 @@
 								<!-- /ko -->
 								<td data-bind="text: tradeDate, attr: { id:'datetd'+$index()}"></td>
 								<td data-bind="text: numberOfShares, attr: { id:'sharetd'+$index()}"></td>
-								<td data-bind="text: lastClosePrice, attr: { id:'closeptd'+$index()}"></td>
+								<td data-bind="text: lastClosePrice"></td>
 								<td data-bind="text: currentValue"></td>
 								<!-- ko if: id -->
     								<td><div class="imgCenterAllign"><img src="img/x-button.png" alt="" data-bind="click: $root.removePerformanceItem.bind($root)" /></div></td>
