Fix for the ticket ##988

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -114,7 +114,7 @@
 				</ul>
 			</div>
 				<div class="clear mt15p ml10p">
-					Total invested includes all transactions. Current value includes purchases and sales. It does not include dividend, stock splits or.. percent change is based on total invested vs. current value. Add other disclosures here.
+					Total invested includes all transactions. Current value includes purchases and sales. It does not include dividend, stock splits or.. percent change is based on total invested vs. current value.
 			</div>
 			<!-- /ko -->
 		</div>
