--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -19,8 +19,12 @@
 	<div class="grid">
 		<span data-bind="template: 'stocklist-header'"></span>
 	</div>
-	
+<!-- ko {if: finalWL().length} -->
 	<section class="valuation-performance" id="valuationSection">
+		<div class="grid scan intro" data-bind="visible: watchlistCompanies().length == 0">
+				<p align="center">You have no companies currently in your StockList.</p>
+		</div>
+		<!-- ko {if: watchlistCompanies().length} -->
 		<div class="header-bar">
 			<ul>
 				<li class="downArrow"><a href="#" data-bind="click:changeTab.bind($data, 'performance'), css:{'active': activeTab() == 'performance'}">PERFORMANCE</a></li>
@@ -170,8 +174,10 @@
 				</div>
 			</div>
 		</div>
+<!-- /ko -->	
 	</section>
 	
+<!-- /ko -->    
     <div class="grid disclosure scan">
 		<p>SGX StockFacts is a collaboration between SGX and S&amp;P Global Market Intelligence, a division of S&amp;P Global. Use of this information is subject to <a data-bind="siteLink:'terms-conditions'">terms and conditions</a>.</p>
 	</div>
