--- a/clientv2/key-developments.html
+++ b/clientv2/key-developments.html
@@ -26,14 +26,14 @@
 	
 <!-- ko {if: finalWL().length} -->	
 	<section class="key-dev-match">
-		<div class="grid scan intro" data-bind="visible: watchlistCompanies().length == 0">
+		<div class="grid scan intro" style="display:none" id="keyDevNoCompaniesTextDiv">
 				<p align="center">You have no companies currently in your StockList.</p>
 		</div>
-		<!-- ko {if: watchlistCompanies().length} -->
-		<div class="grid scan intro">
-		    <p>Select which developments you would like to see for your StockList</p>
-		</div>
-		<div class="content">
+		<div id="keyDevelopemntContentDiv" style="display:none">
+			<div class="grid scan intro">
+			    <p>Select which developments you would like to see for your StockList</p>
+			</div>
+			<div class="content">
 			<div class="control-box">
 				<table>
 					<tr>
@@ -205,7 +205,7 @@
 			
 			</div>
 		</div>
-	<!-- /ko -->
+		</div>
 	</section>
 <!-- /ko -->	
 	<div class="grid disclosure scan">
