--- a/clientv2/key-developments.html
+++ b/clientv2/key-developments.html
@@ -27,7 +27,7 @@
 <!-- ko {if: finalWL().length} -->	
 	<section class="key-dev-match">
 		<div class="grid scan intro" style="display:none" id="keyDevNoCompaniesTextDiv">
-				<p align="center">You have no companies currently in your StockList.</p>
+				<p align="center">You have no companies in your StockList.</p>
 		</div>
 		<div id="keyDevelopemntContentDiv" style="display:none">
 			<div class="grid scan intro">
