--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -22,7 +22,7 @@
 <!-- ko {if: finalWL().length} -->
 	<section class="valuation-performance" id="valuationSection">
 		<div class="grid scan intro" style="display:none" id="valutionNoCompaniesTextDiv">
-				<p align="center">You have no companies currently in your StockList.</p>
+				<p align="center">You have no companies in your StockList.</p>
 		</div>
 		<div id="valuationContentDiv" style="display:none">
 			<div class="header-bar">
