--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -56,7 +56,7 @@
 									<th width="13%"><div class="floatLeft w80P blueCl">Number of Shares</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'numberOfShares'"  /></div></th>
 									<th width="14%"><div class="floatLeft w80P blueCl">Last Close Price</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'lastClosePrice'"  /></div></th>
 									<th width="10%"><div class="floatLeft w80P blueCl">Current value</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'currentValue'"  /></div></th>
-									<th width="5%" ><div class="floatLeft w80P blackCl">Delete </div><img style="padding-left: 13px;" src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'Delete'"  /></th>
+									<th width="5%" ><div class="floatLeft w80P blackCl">Delete </div><img class="tooltip-left" style="padding-left: 13px;" src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'Delete'"  /></th>
 								</tr>
 							</thead>
 							<tbody data-bind="foreach: displayTransactions">
