--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -46,16 +46,16 @@
 							<thead>
 								<tr>
 									<th width="10%" >
-										<div><div style="padding-left: 8px;" class="floatLeft blackCl">Chart <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'chart'"  /></div><div class="float:clear"></div></div>
+										<div><div class="floatLeft blackCl pl8p">Chart <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'chart'"  /></div><div class="float:clear"></div></div>
 										<div class="floatLeft" style="padding-left: 25px;">
 										<input class="textCenter" type="checkbox" id="selectAllId" data-bind="checked: $root.selectAllTransaction">
 										</div>
 									</th>
-									<th width="34%" class="asc" id="companyName" data-bind="click: sortColumnAsc">Company Name</th>
-									<th width="14%"><div class="floatLeft w80P blueCl">First Trade Date</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'firstTradeDate'"  /></div></th>
-									<th width="13%"><div class="floatLeft w80P blueCl">Number of Shares</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'numberOfShares'"  /></div></th>
-									<th width="14%"><div class="floatLeft w80P blueCl">Last Close Price</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'lastClosePrice'"  /></div></th>
-									<th width="10%"><div class="floatLeft w80P blueCl">Current value</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'currentValue'"  /></div></th>
+									<th width="32%" class="asc" id="companyName" data-bind="click: sortColumnAsc">Company Name</th>
+									<th width="15%"><div class="floatLeft w80P blueCl">First Trade <br> Date</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'firstTradeDate'"  /></div></th>
+									<th width="13%"><div class="floatLeft w80P blueCl">Number <br> of Shares</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'numberOfShares'"  /></div></th>
+									<th width="15%"><div class="floatLeft w80P blueCl">Last Close<br> Price</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'lastClosePrice'"  /></div></th>
+									<th width="10%"><div class="floatLeft w80P blueCl">Current   <br> Value</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'currentValue'"  /></div></th>
 									<th width="5%" ><div class="floatLeft w80P blackCl">Delete </div><img class="tooltip-left" style="padding-left: 13px;" src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'Delete'"  /></th>
 								</tr>
 							</thead>
@@ -99,8 +99,8 @@
 							<thead>
 								<tr>								
 									<th width="9%" >
-									<div><div style="padding-left: 8px;" class="floatLeft blackCl">Chart <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'chart'"  /></div><div class="float:clear"></div></div>
-									<div class="floatLeft" style="padding-left: 25px;">
+									<div><div class="floatLeft blackCl pl8p">Chart <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'chart'"  /></div><div class="float:clear"></div></div>
+									<div class="floatLeft pl25p">
 									<input class="textCenter" type="checkbox" id="selectAllId" data-bind="checked: $root.selectAllTransaction">
 									</div>
 									</th>
@@ -128,7 +128,7 @@
 					</ul>
 				</div>
 					<div class="clear mt15p ml10p">
-						Total invested includes all transactions. Current value includes purchases and sales. It does not include dividend, stock splits or.. percent change is based on total invested vs. current value.
+						Total invested includes all transactions. Current value includes purchases and sales. It does not include dividend, stock splits or... Percent change is based on total invested vs. current value.
 				</div>
 				<!-- /ko -->
 			</div>
