--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -160,8 +160,8 @@
 							<td class="company-row"><select class="select-company" id="watchlistCompaniesSelect" data-bind="options: watchlistCompanies, optionsCaption: 'Select a Company', value: selectedCompanyValue, optionsValue: 'ticker', optionsText: 'companyName'"></select></td>
 							<td><select class="select-type" data-bind="options: availableTypes, value: selectedAvailableType" ></select></td>
 							<td><input data-bind="value: initialTradeDate" type="text" id="tradeDate" readonly="readonly"/></td>
-							<td><input type="text" class="text" data-bind="numeric, value: initialNumberOfShares"/></td>
-							<td><input type="text" data-bind="numeric, value: initialCostAtPurchase" /></td>
+							<td><input type="text" class="text" data-bind="numeric, value: initialNumberOfShares, event: { keyup: $root.buySellInitialValidate.bind($root, 'share') }, attr: { id:'initialshare'}"/></td>
+							<td><input type="text" data-bind="numeric, value: initialCostAtPurchase, event: { keyup: $root.buySellInitialValidate.bind($root,'price') }, attr: { id:'initialprice'}" /></td>
 							<td>&nbsp;</td>
 							<td><a class="add-button" data-bind="click: addTrans">Add</a></td>
 						</tr>
