--- a/clientv2/key-developments.html
+++ b/clientv2/key-developments.html
@@ -74,7 +74,7 @@
 			</div>
 			<div class="matches">
 				<h2>Key Development Matches</h2>
-				<div id="allKeyDevDivId" style="display: none">
+				<div id="allKeyDevDivId" class="allKeyDevDivId" style="display: none">
 					<div id="kdAnounceCompTransactionsId">
 					<div data-bind="visible: kdAnounceCompTransactions().length > 0 " >
 						<h3>Announced/Completed Transactions</h3>
