ticket# 982 -Valuation Tab - Performance Table (Checkboxes)

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -34,7 +34,7 @@
 			
 			<!-- div content for performance functionality -->
 			<div class="grid valuation-results performance" data-bind="css:{'show-hidden': activeTab() == 'performance'}">
-				<div style="margin-left: 15px;margin-bottom: 15px;">
+				<div id="performance-chart-header" style="margin-left: 15px;margin-bottom: 15px;">
 					<b>Select a timeframe to see how your StockList changed during that time.</b>
 				</div>
 				
